# src/main/java/de/rjst/cs/api/DeleteResult.java
@@ -1,12 +1,0 @@
-package de.rjst.cs.api;
-
-import lombok.Builder;
-import lombok.Data;
-
-@Builder
-@Data
-public class DeleteResult {
-
-    private Long id;
-
-}
